Reduce java build version to 11